k8s/url-shortener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service
spec:
  selector:
    app: url-shortener
  ports:
    - protocol: TCP
      port: 80        # Exposed port
      targetPort: 5000 # Your app's Flask port
